src/snapshots/patro_mesh__mail_parser__tests__should_parse_node_3d_coords-5.snap
---
source: src/mail_parser.rs
expression: "node_3d_coords(\" 1,2  23.3 233\")"
---
Err(
    Error(
        Error {
            input: ",2  23.3 233",
            code: MultiSpace,
        },
    ),
)
